# anf

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  adt.h  anf.c  anf.h  ast.c  ast.h  bind.c  bind.h  check.c  check.h  emit.c  emit.h  eval.c  flatten.c  hash.h  htable.c  htable.h  io.c  io.h  lca.c  lca.h  lex.c  lex.h  lex_gen.c  lex_gen.py  log.c  log.h  logic.c  logic.h  main.c  mem2reg.c  mod.c  mod.h  mpool.c  mpool.h  node.c  node.h  opt.c  parse.c  parse.h  (+11 more)
test/: CMakeLists.txt  literals.anf  main.c  test.c
test/invalid/: args.anf  array.anf  array1.anf  array2.anf  bind.anf  comment.anf  functions.anf  literals.anf  literals2.anf  params.anf  patterns.anf  structs.anf  structs2.anf  unused.anf  utf8.anf
test/valid/: annots.anf  array.anf  conditions.anf  functions.anf  lambda.anf  literals.anf  loops.anf  ops.anf  pow.anf  structs.anf
