add_executable(anf_test test.c)
target_link_libraries(anf_test libanf)
target_include_directories(anf_test PUBLIC ../src)

add_test(NAME core      COMMAND anf_test)

add_test(NAME valid_literals  COMMAND anf ${PROJECT_SOURCE_DIR}/test/valid/literals.anf)
add_test(NAME valid_array     COMMAND anf ${PROJECT_SOURCE_DIR}/test/valid/array.anf)
add_test(NAME valid_functions COMMAND anf ${PROJECT_SOURCE_DIR}/test/valid/functions.anf)
add_test(NAME valid_loops     COMMAND anf ${PROJECT_SOURCE_DIR}/test/valid/loops.anf)
add_test(NAME valid_ops       COMMAND anf ${PROJECT_SOURCE_DIR}/test/valid/ops.anf)
add_test(NAME valid_pow       COMMAND anf ${PROJECT_SOURCE_DIR}/test/valid/pow.anf)
add_test(NAME valid_lambda    COMMAND anf ${PROJECT_SOURCE_DIR}/test/valid/lambda.anf)
add_test(NAME valid_annots    COMMAND anf ${PROJECT_SOURCE_DIR}/test/valid/annots.anf)
add_test(NAME valid_structs   COMMAND anf ${PROJECT_SOURCE_DIR}/test/valid/structs.anf)

add_test(NAME invalid_array    COMMAND anf --must-fail ${PROJECT_SOURCE_DIR}/test/invalid/array.anf)
add_test(NAME invalid_params   COMMAND anf --must-fail ${PROJECT_SOURCE_DIR}/test/invalid/params.anf)
add_test(NAME invalid_comment  COMMAND anf --must-fail ${PROJECT_SOURCE_DIR}/test/invalid/comment.anf)
add_test(NAME invalid_utf8     COMMAND anf --must-fail ${PROJECT_SOURCE_DIR}/test/invalid/utf8.anf)
add_test(NAME invalid_patterns COMMAND anf --must-fail ${PROJECT_SOURCE_DIR}/test/invalid/patterns.anf)
add_test(NAME invalid_bind     COMMAND anf --must-fail ${PROJECT_SOURCE_DIR}/test/invalid/bind.anf)
